@@ -524,8 +524,7 @@ static gchar *get_remote_catalogue_cached_path(siril_catalogue *siril_cat, gbool
 	gchar *filepath = g_build_filename(root, filename, NULL);
 
 	if (!g_file_test(root, G_FILE_TEST_EXISTS)) {
-		if (g_mkdir_with_parents(root, 0755) < 0) {
-			siril_log_color_message(_("Cannot create output folder: %s\n"), "red", root);
+		if (siril_mkdir_with_parents(root, 0755) < 0) {
 			g_free(filepath);
 			g_free(root);
 			return NULL; // we won't be able to write to the file
