@@ -2429,8 +2429,8 @@ gchar *get_sequence_cache_filename(sequence *seq, int index, const gchar *ext, c
 		cache_filename = g_strdup_printf("%s%s.%s", prefix, root, ext);
 	else
 		cache_filename = g_strdup_printf("%s.%s", root, ext);
-
-	gchar *cache_path = g_build_path(G_DIR_SEPARATOR_S, com.wd, "cache", cache_filename, NULL);
+	const gchar *base_cache_filename = g_path_get_basename(cache_filename);
+	gchar *cache_path = g_build_path(G_DIR_SEPARATOR_S, com.wd, "cache", base_cache_filename, NULL);
 	g_free(cache_filename);
 	return cache_path;
 }
